TST: Adding a coverage report and updating CI
Adding Coveralls action. Currently calling pytest twice
on one of the runners, but it is so fast it isn't a big
issue here.

MacOS on GitHub Actions doesn't use the correct path with
a login shell specified, so remove the login shell option.

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -12,7 +12,7 @@ jobs:
         python-version: [3.6, 3.9]
     defaults:
       run:
-        shell: bash -l {0}
+        shell: bash {0}
 
     steps:
       - uses: actions/checkout@v2
@@ -29,10 +29,21 @@ jobs:
 
       - name: Install pysecs
         run: |
-          pip install .
+          pip install -e .
 
       - name: Testing
         id: test
         run: |
-          python -m flake8
-          python -m pytest
+          flake8
+          pytest
+
+      - name: Coverage
+        id: coverage
+        # Only run coverage on one branch
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.9'}}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          pip install coveralls pytest-cov
+          pytest --cov=pysecs
+          coveralls --service=github
