--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -21,9 +21,9 @@ jobs:
 
       - name: Build sdist
         run: |
-          pip install numpy
-          python setup.py bdist_wheel
-          python setup.py sdist
+          pip install numpy setuptools wheel
+          python setup.py sdist bdist_wheel
+
       - uses: actions/upload-artifact@v2
         with:
           path: dist/*.tar.gz
