--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Testing
         id: test
         run: |
-          pytest --cov=pysecs --cov=tests
+          pytest --cov-report=xml
 
       - name: Upload code coverage
         uses: codecov/codecov-action@v3
