--- a/.github/workflows/doc-publish.yml
+++ b/.github/workflows/doc-publish.yml
@@ -3,30 +3,29 @@ name: Publish Documentation
 on:
   push:
     branches:    
-      - master
+      - main
 
 jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.9
+        python-version: 3.12
 
     - name: Install packages
       run: |
-        pip install -r docs/requirements.txt
-        pip install .
+        pip install .[doc]
 
     - name: Build documentation
       run: |
         cd docs
         make html
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: DocumentationHTML
         path: docs/build/html/
